--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ port = 8501
 baseUrlPath = "/admineono/"
 
 [browser]
-serverAddress = "https://admine.mark-build.com"
+serverAddress = "https://admin.mark-build.com"
