--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,5 @@ port = 8501
 baseUrlPath = "/admineono/"
 
 [browser]
-serverAddress = "https://admin.mark-build.com"
+serverAddress = "admin.mark-build.com"
+
