--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@ port = 80
 baseUrlPath = "/admineono/"
 
 [browser]
-serverAddress = "admin.mark-build.com"
+serverAddress = "mark-build.com"
 serverPort = 80
