--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [server]
 port = 80
-baseUrlPath = "/admineono/"
+baseUrlPath = "/"
 
 [browser]
-serverAddress = "mark-build.com"
+serverAddress = "admin.mark-build.com"
 serverPort = 80
