--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -13,4 +13,4 @@ allowedOrigins = [
   "https://ic8sk8o.mark-build.com"
 ]
 [browser]
-serverAddress = "0.0.0.0"
+serverAddress = "ic8sk8o.mark-build.com"
