--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,14 +3,6 @@ headless = true
 enableCORS = true  # Enable CORS to allow cross-origin requests
 enableXsrfProtection = true  # Enable XSRF protection for security
 port = 80  # Port 80 is standard for HTTP; if using HTTPS, this might need to be changed
-baseUrlPath = "/url_path/"
 
-[general]
-email = "bogdansavi05@gmail.com"
-
-[cors]
-allowedOrigins = [
-  "https://ic8sk8o.mark-build.com"
-]
 [browser]
-serverAddress = "ic8sk8o.mark-build.com"
+serverAddress = "admin.mark-build.com"
